fix: Remove pgBouncer parameter from the blocked list
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>